resources/assets/sass/main.scss
/* ... */
.main-header .brand-user {
    width: 23px;
    height: 23px;
    display: block;
    background-position: -65px 145px;
    position: absolute;
    right: 0;
    top: 0
}

/* Top Nav */
.navbar-header {
    background: #343838;
    height: 50px;
    text-align: center;
}

.navbar-toggle {
    position: absolute;
    top: 0;
    margin-right: 0;
}

.navbar-toggle .icon-bar {
    display: block;
    width: 22px;
    height: 2px;
    border-radius: 1px;
    background: #fff;
}

.nav.navbar-nav {
    width: 100%;
    border-bottom: 1px solid #fff;
}

.nav.navbar-nav li a {
    color: #4c4c4c;
    font-size: 14px;
    font-weight: 700
}

@media (min-width: 768px) {
    .subnav.nav.navbar-nav li:first-child a {
        padding-left: 0;
    }
    .modal-sm {
        max-width: 600px !important;
    }
}

.nav.navbar-nav li:hover a {
    background: inherit
}

.nav.navbar-nav li.active a {
    font-family: 'GothamBlackRegular'
}

/* Center Box Responsive */
@media (max-width: 500px) {
    .center-box-grey p {
        width: 90%
    }

    .center-box-grey .form-block {
        margin-left: 15px;
        margin-right: 15px
    }
}

/* List items */

.list-items {
    margin: 0;
    padding: 0;
    list-style-type: none;
    margin-left: 15px
}

.list-items li {
    width: 100%;
    display: block;
    margin: 15px 0;
    position: relative;
    padding-left: 15px
}

.list-items.big-margin li {
    margin-bottom: 30px;
}

.list-items li:first-child {
    margin-top: 0
}

.list-items li .brand-icon {
    width: 22px;
    height: 21px;
    display: inline-block;
    vertical-align: middle;
    left: -15px;
    position: absolute
}

.list-items li a {
    text-decoration: none !important;
    color: #153661;
}

/* Footer */
footer{
    background: $dark-grey;
    padding: 120px 0 120px 0;
    margin-top: 100px;
    position: absolute;
    bottom: 0;
    width: 100%;
    z-index: 990;
    ul{
      padding: 0;
      li{
        display: inline-block;
        margin-right: 15px;
        a{
          color: $grey-two;
        }
      }
      &.footer-social{
        li{
          &.twitter a{
            background-color: $twitter-blue;
          }
          &.linkedin a{
            background-color: $linkedin-blue;
          }
          a{
            display: block;
            color: #fff;
            border-radius: 50%;
            padding: 5px 8px;
          }
        }
      }
    }
  }

.footer-items {
    margin: 0;
    padding: 0;
    list-style-type: none;
    margin-left: 15px
}

.footer-items li {
    width: 100%;
    display: block;
    margin: 15px 0;
    position: relative;
    padding-left: 15px
}

.footer-items.big-margin li {
    margin-bottom: 30px;
}

.footer-items li:first-child {
    margin-top: 0
}

.footer-items li .brand-icon {
    width: 22px;
    height: 21px;
    display: inline-block;
    vertical-align: middle;
    left: -15px;
    position: absolute
}

.footer-items li a {
    text-decoration: none !important;
    color: #FFFFFF !important;
}

.footer .footer-right-foot {
    margin-top: 50px;
    text-align: right;
    font-size: 10px
}

.block-label {
    display: block;
}

.btn-apd {
    font-size: 12px;
    padding: 15px 34px;
}

.block-label .notice {
    font-style: italic;
    float: right;
    display: inline-block;

}

// How it Works - Candidates

.candidates{
    .banner{
        padding-bottom: 80px;
        h2{
            font-size: 40px;
            span{
                font-size: 30px;
            }
        }
    }
}

.full-width-central{
    padding: 80px 0;
    text-align: center;
    p{
        font-size: 18px;
    }
}

/* Footer Responsive */
@media (max-width: 767px) {
    .footer {
        text-align: center;
    }

    .footer-items {
        margin: 0 auto;
        display: inline-block;
    }

    .footer-items li {
        text-align: left;
    }

    .list-items {
        margin: 0 auto;
        display: inline-block;
    }

    .list-items li {
        text-align: left;
    }

    .col-sm-cen, .col-sm-cen p {
        text-align: center !important
    }
}

.hirer p {
}

.hirer .btn-primary {
    padding: 10px 18px;
    margin-top: 20px;
}

/*Form Tabs*/


.register{
    padding: 0 0 60px 0;
    background: $light-grey;
    .banner{
        margin-bottom: 60px;
        background-color: #fff;
        background-image: url('/img/handshake-banner.jpg');
        background-size: contain;
        background-position: top right;
        h2{
            text-transform: uppercase;
        }
    }
    .register-content{
        h2{
            color: $red-two;
        }
    }
    .intro-para{
        text-transform: uppercase;
        font-weight: 700;
    }
    p{
        a{
            color: $red-two;
        }
    }
}

.form-tabs .nav-tabs > li {
    width: 50%;
    display: inline-block;
}

.form-tabs .nav-tabs > li > a > .brand-icon {
    width: 22px;
    height: 22px;
    display: block;

    position: absolute;
    right: 8px;
    top: 8px;
}

.form-tabs .nav-tabs > li.active > a, 
.form-tabs .nav-tabs > li.active > a:hover, 
.form-tabs .nav-tabs > li.active > a:focus {
    color: $red-two;
    cursor: default;
    border: 0px solid #ddd;
    border-bottom-color: transparent;
}

.form-tabs .nav-tabs li a {
    font-size: 12px;
    border-radius: 0;
    background: #f0f0f0;
    color: $dark-grey;
    margin-right: 0;
    margin-left: 0;
    border: 0;
}

.form-tabs .nav-tabs li.active a {
    background: #fff;
    color: $red-two;
    font-weight: 700;
}

.form-tabs .tab-pane .tab-title {
    text-align: center;
    color: $dark-grey;
    margin-top: 0px;
    padding-top: 20px;
    padding-bottom: 20px;
    border-bottom: 1px solid #31537f;
}

.form-tabs .tab-content {
    display: block;
    color: $dark-grey;
    background: #fff;
    padding: 0 20px;
}

.form-tabs .tab-content .tab-pane {
    padding-bottom: 15px;
}

.p-360 {

    width: 360px !important;

}

.form-tabs .btn.btn-primary {
    background: #75869a;
    border: 0;
}
/* ... */

